force-app/main/default/objects/Airline__c/fields/Established__c.field-meta.xml
<CustomField>
    <fullName>Established__c</fullName>
    <label>Established</label>
    <length>80</length>
    <type>Text</type>
</CustomField>