force-app/main/default/objects/Airline__c/fields/Head_Quarters__c.field-meta.xml
<CustomField>
    <fullName>Head_Quarters__c</fullName>
    <label>Head Quarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>