force-app/main/default/objects/Airline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Head_Quarters__c</columns>
    <columns>Established__c</columns>
    <columns>Slogan__c</columns>
    <columns>Logo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>